# recode

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  recode.slnx
cmake/: FindUnistring.cmake
recode/: CMakeLists.txt  impl_libiconv.cc  impl_libunistring.cc  impl_win32.cc  internal.hh  recode.cc  recode.vcxproj  recode.vcxproj.filters  util.cc  vcpkg.json
recode/Tests/: Test01.cc  Test01.vcxproj
recode/include/recode/: recode.hh  recode_private.hh  strlen.hh
